fix(hfg): popover inside container with overflow

--- a/assets/apps/customizer-controls/src/builder/scss/_rows.scss
+++ b/assets/apps/customizer-controls/src/builder/scss/_rows.scss
@@ -204,6 +204,13 @@
   &:hover, &.has-popover {
 	.open-popover {
 	  opacity: .25;
-	}
+	}	
   }
+}
+
+/**
+ * Fix for the popover not being visible when it is inside a container with overflow.
+ */
+.rows-wrapper .vertical-rows .droppable-wrap.has-popover > .components-popover {
+	position: fixed !important;
 }
